RESOLVED FIXED21733
[CAIRO] Image cleared too early
https://bugs.webkit.org/show_bug.cgi?id=21733
Summary [CAIRO] Image cleared too early
Dirk Schulze
Reported 2008-10-18 11:56:22 PDT
If I draw the same image several times on a context via drawImage(image, ...), only the first image is drawn to the context. The others are transparent or not available, don't know. It seems that the image is cleared after the first draw operation. This bug appears with this patch http://trac.webkit.org/changeset/37612. Only cairo seems to be affected. Qt has no problems with it. Could not test Cg yet.
Attachments
Patch (951 bytes, patch)
2008-10-20 11:39 PDT, Dave Hyatt
sam: review+
Dave Hyatt
Comment 1 2008-10-20 11:39:28 PDT
Sam Weinig
Comment 2 2008-10-20 11:44:29 PDT
Comment on attachment 24527 [details] Patch Needs a changelog. r=me
Dave Hyatt
Comment 3 2008-10-20 11:45:43 PDT
Fixed in r37740.
Note You need to log in before you can comment on or make changes to this bug.