2008-10-20  David Hyatt  <hyatt@apple.com>

https://bugs.webkit.org/show_bug.cgi?id=21733

        Make sure that the haveMetadata flag is set to true for generated images from image buffers, so that
        no attempt is made to re-cache the frame from a non-existent image source.

        Reviewed by Sam Weinig

        * platform/graphics/cairo/ImageCairo.cpp:
        (WebCore::BitmapImage::BitmapImage):
        * platform/graphics/cg/ImageCG.cpp:
        (WebCore::BitmapImage::BitmapImage):



Canonical link: https://commits.webkit.org/29971@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37740 268f45cc-cd09-0410-ab3c-d52691b4dbfc